updating heading levels and styles, fixing comments and whitespace

--- a/services/index.html
+++ b/services/index.html
@@ -7,52 +7,52 @@
       <h2 class="title-divider">
         <span><span>WebSurvey</span> Services</span>
       </h2>
-    <div id="SurveyFeatures">
-      <div class="inner">
-    <!--Feature list-->
-    <!--a feature-->
-        <div class="feature-icon col-lg-2 col-md-2 col-sm-2 col-xs-12">
-          <img src="/img/features/secure.png" width="96" height="95" alt="Secure"  class="img-responsive">
-        </div>
-        <div class="description col-lg-10 col-md-10 col-sm-10 col-xs-12">
-            <h4>Secure and reliable survey hosting</h4>
+      <div id="SurveyServices">
+        <div class="inner">
+        <!--Service list-->
+          <!--a service-->
+          <div class="feature-icon col-lg-2 col-md-2 col-sm-2 col-xs-12">
+            <img src="/img/features/secure.png" width="96" height="95" alt="Secure"  class="img-responsive">
+          </div>
+          <div class="description col-lg-10 col-md-10 col-sm-10 col-xs-12">
+            <h3>Secure and reliable survey hosting</h3>
             <p>We understand that state-of-the-art data security is essential. WebSurvey is hosted in a secure Melbourne based co-location facility in a dedicated cabinet containing our network of high-end servers.</p>
             <p>Our online functionality is closely monitored by our dedicated IT Infrastructure team. WebSurvey is operated by Strategic Data and uses the same infrastructure. Strategic Data has implemented and maintains policy and procedure consistent with certification at the PROTECTED level of the Australian Signals Directorate’s (ASD) Australian Government Information Security Manual (ISM).</p>
-            <p>&nbsp;</p>
-    	</div>
-     <!-- /feature-->
-     <!--a feature-->
-        <div class="feature-icon col-lg-2 col-md-2 col-sm-2 col-xs-12">
-          <img src="/img/features/helpdesk.png" width="96" height="95" alt="Help Desk" class="img-responsive">
-        </div>
-  		<div class="description col-lg-10 col-md-10 col-sm-10 col-xs-12">
-            <h4>Help desk support for your respondents</h4>
+      	  </div>
+          <!-- /service-->
+          <!--a service-->
+          <div class="feature-icon col-lg-2 col-md-2 col-sm-2 col-xs-12">
+            <img src="/img/features/helpdesk.png" width="96" height="95" alt="Help Desk" class="img-responsive">
+          </div>
+    		  <div class="description col-lg-10 col-md-10 col-sm-10 col-xs-12">
+            <h3>Help desk support for your respondents</h3>
             <p>We provide you with a Support service throughout the survey period. In addition, we can also establish a helpdesk service for your respondents with a dedicated telephone support number and email address. This helpdesk can assist respondents with lost passwords, browser, network or other issues as required.</p>
-        </div>
-     <!-- /feature-->
-      <!--a feature-->
-        <div class="feature-icon col-lg-2 col-md-2 col-sm-2 col-xs-12">
-          <img src="/img/features/profiles.png" width="96" height="95" alt="Profiles" class="img-responsive">
-        </div>
-  		<div class="description col-lg-10 col-md-10 col-sm-10 col-xs-12">
-            <h4>Respondent profiles and email invitations</h4>
+          </div>
+          <!-- /service-->
+          <!--a service-->
+          <div class="feature-icon col-lg-2 col-md-2 col-sm-2 col-xs-12">
+            <img src="/img/features/profiles.png" width="96" height="95" alt="Profiles" class="img-responsive">
+          </div>
+    		  <div class="description col-lg-10 col-md-10 col-sm-10 col-xs-12">
+            <h3>Respondent profiles and email invitations</h3>
             <p>WebSurvey allows you to create individual respondent credentials with usernames and passwords, allowing users to 'login' to complete your survey.</p>
             <p>Invitations introducing your survey to respondents can be sent via email, as can completion reminders following up those who haven't responded before your survey's close.</p>
             <p>After your survey is complete, you can run it again in the future and compare your results.</p>
-        </div>
-     <!-- /feature-->
-      <!--a feature-->
-        <div class="feature-icon col-lg-2 col-md-2 col-sm-2 col-xs-12">
-          <img src="/img/features/analysis.png" width="96" height="95" alt="Analysis" class="img-responsive">
-        </div>
-  		<div class="description col-lg-10 col-md-10 col-sm-10 col-xs-12">
-            <h4>Results, analysis and bulk survey reporting</h4>
+          </div>
+          <!-- /service-->
+          <!--a service-->
+          <div class="feature-icon col-lg-2 col-md-2 col-sm-2 col-xs-12">
+            <img src="/img/features/analysis.png" width="96" height="95" alt="Analysis" class="img-responsive">
+          </div>
+    		  <div class="description col-lg-10 col-md-10 col-sm-10 col-xs-12">
+            <h3>Results, analysis and bulk survey reporting</h3>
             <p>The results of your survey can be delivered in an agreed format. Typically, WebSurvey users receive results in Excel, CSV, HTML or SPSS.</p>
             <p>If required, WebSurvey's data experts can also analyse your survey's results.</p>
             <p>For large online surveys, bulk reports can automatically be prepared in Microsoft Office friendly formats.  Bulk reports are usually one per individual respondent, but can also be aggregated across demographic groups as required. Additional charges may apply.</p>
+          </div>
+          <!-- /service-->
         </div>
-     <!-- /feature-->
-        </div>
-       </div> <!-- /SurveyFeatures-->
-      </div>
-    </div></div><!-- /content-->
+      </div> <!-- /SurveyServices-->
+    </div>
+  </div>
+</div><!-- /content-->
