replacing carousel with accessible version

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@ simply hand us your questions and we can do the rest</p>
           <p>We create and publish your survey, manage invitations and provide project support during the survey.</p>
         </div>
         <div class="col-sm-12 col-md-12 space-below">
-        <a href="/features/" class="btn btn-md btn-primary">More features</a>
+          <a href="/features/" class="btn btn-md btn-primary">More features</a>
         </div>
       </div>
     </div>
@@ -91,58 +91,58 @@ simply hand us your questions and we can do the rest</p>
         <span>Why <span>WebSurvey? </span></span>
       </h2>
       <div class="row">
-     <!-- How does it work box start -->
+        <!-- How does it work box start -->
         <div class="col-sm-4 col-md-4 col-lg-4 col-xs-12 box">
         	<div class="how-it-works how-it-works1">
-              <h3 class="title">
-                <span>01</span> Full Service
-              </h3>
-              <p class="no-space"><strong>Service driven delivery model</strong></p>
-              <ul>
-                <li>You provide survey questions</li>
-                <li>Tailor your survey with logos and branding</li>
-                <li>Get advice on the structure of your survey</li>
-                <li>Monitor your survey's progress </li>
-                <li>Support your survey with a helpdesk service</li>
-              </ul>
+            <h3 class="title">
+              <span>01</span> Full Service
+            </h3>
+            <p class="no-space"><strong>Service driven delivery model</strong></p>
+            <ul>
+              <li>You provide survey questions</li>
+              <li>Tailor your survey with logos and branding</li>
+              <li>Get advice on the structure of your survey</li>
+              <li>Monitor your survey's progress </li>
+              <li>Support your survey with a helpdesk service</li>
+            </ul>
         	</div>
-          </div>
-      <!-- How does it work box end -->
-      <!-- How does it work box start -->
-       <div class="col-sm-4 col-md-4 col-lg-4 col-xs-12 box">
+        </div>
+        <!-- How does it work box end -->
+        <!-- How does it work box start -->
+        <div class="col-sm-4 col-md-4 col-lg-4 col-xs-12 box">
         	<div class="how-it-works how-it-works2">
-              <h3 class="title">
-                <span>02</span> Customisable
-              </h3>
-              <p class="no-space"><strong>Tailored system</strong></p>
-              <ul>
-                <li>Quantitative and qualitative questions</li>
-                <li>Adaptive logic and answer variations</li>
-                <li>We create surveys that behave exactly the way you want.</li>
-              </ul>
-              <p><strong>Reporting and analysis</strong></p>
+            <h3 class="title">
+              <span>02</span> Customisable
+            </h3>
+            <p class="no-space"><strong>Tailored system</strong></p>
+            <ul>
+              <li>Quantitative and qualitative questions</li>
+              <li>Adaptive logic and answer variations</li>
+              <li>We create surveys that behave exactly the way you want.</li>
+            </ul>
+            <p><strong>Reporting and analysis</strong></p>
         	</div>
-          </div>
-      <!-- How does it work box end -->
-           <!-- How does it work box start -->
-           <div class="col-sm-4 col-md-4 col-lg-4 col-xs-12 box">
+        </div>
+        <!-- How does it work box end -->
+        <!-- How does it work box start -->
+        <div class="col-sm-4 col-md-4 col-lg-4 col-xs-12 box">
         	<div class="how-it-works how-it-works3">
-              <h3 class="title">
-                <span>03</span> Use WebSurvey for:
-              </h3>
-              <p class="no-space"><strong>Surveys of all kinds</strong></p>
-              <ul>
-                <li>Questionnaires, market research, workplace culture, pulse, 360 degree, professional or membership surveys.</li>
-              </ul>
-              <p class="no-space"><strong>Online data collection</strong></p>
-              <ul>
-                <li>Research Projects, Audits, Census Projects and Surveys.</li>
-              </ul>
+            <h3 class="title">
+              <span>03</span> Use WebSurvey for:
+            </h3>
+            <p class="no-space"><strong>Surveys of all kinds</strong></p>
+            <ul>
+              <li>Questionnaires, market research, workplace culture, pulse, 360 degree, professional or membership surveys.</li>
+            </ul>
+            <p class="no-space"><strong>Online data collection</strong></p>
+            <ul>
+              <li>Research Projects, Audits, Census Projects and Surveys.</li>
+            </ul>
         	</div>
-          </div>
-      <!-- How does it work box end -->
+        </div>
+        <!-- How does it work box end -->
         <div class="col-sm-12 col-md-12 space-below">
-        <a href="/faq/" class="btn btn-md btn-primary">Read our FAQs</a>
+          <a href="/faq/" class="btn btn-md btn-primary">Read our FAQs</a>
         </div>
       </div>
     </div>
@@ -153,42 +153,49 @@ simply hand us your questions and we can do the rest</p>
       <h2 class="title-divider">
         <span>Clients</span>
       </h2>
-<div id="clients">
-  <!-- Logos carousel Uses Owl Carousel plugin All options here are customisable from the data-owl-carousel-settings="{OBJECT}" item via data- attributes: http://www.owlgraphic.com/owlcarousel/#customizing ie. data-settings="{"items": "4", "lazyLoad":"true", "navigation":"true"}" -->
-        <div class="customers-carousel" data-toggle="owl-carousel" data-owl-carousel-settings='{"items": 4, "lazyLoad":true, "navigation":true, "scrollPerPage":true}'>
-          <a href="/">
-            <img src="/img/logos/TP.jpg" alt="Towers Perrin" class="lazyOwl img-responsive underlay" data-src="img/logos/TP.jpg" />
+      <div class="gallery items-3">
+        <div id="item-1" class="control-operator"></div>
+        <div id="item-2" class="control-operator"></div>
+        <div id="item-3" class="control-operator"></div>
+        <figure class="item">
+          <a href="http://www.hrc.govt.nz/" target="_blank">
+            <img class="img-responsive" src="/img/logos/HRC.jpg" alt="Health Research Council Of New Zealand" />
           </a>
-          <a href="/">
-            <img src="/img/logos/HRC.jpg" alt="Health Research Council Of New Zealand" class="lazyOwl img-responsive underlay" data-src="img/logos/HRC.jpg" />
+          <a href="http://www.dse.vic.gov.au/" target="_blank">
+            <img class="img-responsive" src="/img/logos/DSE.jpg" alt="Department of Sustainability and Environment"/>
           </a>
-          <a href="/">
-            <img src="/img/logos/DSE.jpg" alt="Department of Sustainability and Environment" class="lazyOwl img-responsive underlay" data-src="img/logos/DSE.jpg" />
+          <a href="https://www.vu.edu.au/" target="_blank">
+            <img class="img-responsive" src="/img/logos/VU.jpg" alt="Victoria University"/>
           </a>
-          <a href="/">
-            <img src="/img/logos/VU.jpg" alt="Victoria University" class="lazyOwl img-responsive underlay" data-src="img/logos/VU.jpg" />
+        </figure>
+        <figure class="item">
+          <a href="http://www.unimelb.edu.au/" target="_blank">
+            <img class="img-responsive" src="/img/logos/UoM.jpg" alt="University of Melbourne"/>
           </a>
-          <a href="/">
-            <img src="/img/logos/UoM.jpg" alt="University of Melbourne" class="lazyOwl img-responsive underlay" data-src="img/logos/UoM.jpg" />
+          <a href="http://www.cec.health.nsw.gov.au/" target="_blank">
+            <img class="img-responsive" src="/img/logos/CEC.jpg" alt="Clinical Excellence Commission"/>
           </a>
-          <a href="/">
-            <img src="/img/logos/CEC.jpg" alt="Clinical Excellence Commission" class="lazyOwl img-responsive underlay" data-src="img/logos/CEC.jpg" />
+          <a href="http://www.mentalhealth.wa.gov.au/Homepage.aspx" target="_blank">
+            <img class="img-responsive" src="/img/logos/MHCWA.gif" alt="Mental Health Commission WA"/>
           </a>
-          <a href="/">
-            <img src="/img/logos/MHCWA.gif" alt="Mental Health Commission WA" class="lazyOwl img-responsive underlay" data-src="img/logos/MHCWA.gif" />
+        </figure>
+        <figure class="item">
+          <a href="http://www.nab.com.au/" target="_blank">
+            <img class="img-responsive" src="/img/logos/NAB.jpg" alt="National Australia Bank"/>
           </a>
-          <a href="/">
-            <img src="/img/logos/NAB.jpg" alt="National Australia Bank" class="lazyOwl img-responsive underlay" data-src="img/logos/NAB.jpg" />
+          <a href="http://www.rightmanagement.com.au/wps/wcm/connect/right-au-en/home" target="_blank">
+            <img class="img-responsive" src="/img/logos/Rgt.jpg" alt="Right Management"/>
           </a>
-          <a href="/">
-            <img src="/img/logos/Rgt.jpg" alt="Right Management" class="lazyOwl img-responsive underlay" data-src="img/logos/Rgt.jpg" />
+          <a href="https://www.uq.edu.au/" target="_blank">
+            <img class="img-responsive" src="/img/logos/UoQ.jpg" alt="University of Queensland"/>
           </a>
-          <a href="/">
-            <img src="/img/logos/UoQ.jpg" alt="University of Queensland" class="lazyOwl img-responsive underlay" data-src="img/logos/UoQ.jpg" />
-          </a>
+        </figure>
+        <div class="controls">
+          <a href="#item-1" class="control-button"><i class="fa fa-square"></i></a>
+          <a href="#item-2" class="control-button"><i class="fa fa-square"></i></a>
+          <a href="#item-3" class="control-button"><i class="fa fa-square"></i></a>
         </div>
-
-</div>
+      </div>
     </div>
   </div>
 </div>
