--- a/faq/technical-features.html
+++ b/faq/technical-features.html
@@ -5,36 +5,7 @@ title: FAQ
 <div id="content">
   <div class="container faq-page">
     <div class="row">
-      <!-- sidebar -->
-      <div class="col-md-3 sidebar">
-
-        <!-- Sections Menu-->
-        <div class="section-menu">
-          <ul class="nav nav-list">
-            <li>
-              <a href="/faq/" class="first">
-                Getting Started
-                <small>An introduction to WebSurvey</small>
-                <i class="fa fa-angle-right"></i>
-              </a>
-            </li>
-            <li class="active">
-              <a href="/faq/technical-features.html" class="first">
-                Technical Features
-                <small>Secure and Accessible</small>
-                <i class="fa fa-angle-right"></i>
-              </a>
-            </li>
-            <li>
-              <a href="/faq/about-web-survey.html" class="first">
-                About WebSurvey
-                <small>Our Philosophy</small>
-                <i class="fa fa-angle-right"></i>
-              </a>
-            </li>
-          </ul>
-        </div>
-      </div>
+      {% include sidebar.html param="technical" %}
       <!--main content-->
       <div class="col-md-9">
         <h2 class="title-divider">
