--- a/about/accessibility.html
+++ b/about/accessibility.html
@@ -12,12 +12,12 @@ title: Accessibility
     <div class="inner">
       <!-- Accessibility -->
       <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-        <p>WebSurvey is committed to ensuring our website and surveys are accessibile to the widest possible audience. We actively work towards accessibility best practices so people of all abilities can use our services.</p>
+        <p>WebSurvey is committed to ensuring our website is accessibile to the widest possible audience. We actively work towards accessibility best practices so people of all abilities can use our services.</p>
 
-        <h3>Compliance Level</h3>
+        <h3>Our Surveys Compliance Level</h3>
         <p>
-          WebSurvey works towards having our website and surveys compliant at WCAG 2.0 Level AA.<br/>
-          Please keep this in mind if you require custom or advanced survey components, that this might take some extra time to ensure they are accessible to all users.
+          The majority of WebSurvey's standard functionality complies with the Web Content Accessibility Guidelines (WCAG) 2.0 guidelines at the AA standard.<br/>
+          WebSurvey is able to provide fully compliant surveys where required. Please contact us for more information.
         </p>
 
         <h3>Contact us</h3>
