--- a/about/accessibility.html
+++ b/about/accessibility.html
@@ -14,7 +14,7 @@ title: Accessibility
       <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
         <p>WebSurvey is committed to ensuring our website is accessibile to the widest possible audience. We actively work towards accessibility best practices so people of all abilities can use our services.</p>
 
-        <h3>Our Surveys Compliance Level</h3>
+        <h3>Our Surveys</h3>
         <p>
           The majority of WebSurvey's standard functionality complies with the Web Content Accessibility Guidelines (WCAG) 2.0 guidelines at the AA standard.<br/>
           WebSurvey is able to provide fully compliant surveys where required. Please contact us for more information.
