moved container divs to default

--- a/about/accessibility.html
+++ b/about/accessibility.html
@@ -2,6 +2,7 @@
 title: Accessibility
 ---
 <!-- ======== @Region: #content ======== -->
+
 <div id="content">
   <div class="container accessibility-page">
     <div class="block">
@@ -19,14 +20,18 @@ title: Accessibility
           The majority of WebSurvey's standard functionality complies with the Web Content Accessibility Guidelines (WCAG) 2.0 guidelines at the AA standard.<br/>
           WebSurvey is able to provide fully compliant surveys where required. Please contact us for more information.
         </p>
+  <h3>Compliance Level</h3>
+  <p>
+    WebSurvey works towards having our website and surveys compliant at WCAG 2.0 Level AA.<br/>
+    Please keep this in mind if you require custom or advanced survey components, that this might take some extra time to ensure they are accessible to all users.
+  </p>
 
-        <h3>Contact us</h3>
-        <p>If you experience a problem accessing this site, please contact us by emailing us at <a href="mailto:info@websurvey.com.au">info@websurvey.com.au</a> or by writing to us at:</p>
-        <p>WebSurvey<br/>PO Box 1166<br/>Carlton VIC 3053<br/>Australia</p>
+  <h3>Contact us</h3>
+  <p>
+    If you experience a problem accessing this site, please contact us by emailing us at <a href="mailto:info@websurvey.com.au">info@websurvey.com.au</a> or by writing to us at:
+  </p>
+  <p>WebSurvey<br/>PO Box 1166<br/>Carlton VIC 3053<br/>Australia</p>
 
-        <h3>Conformance Date</h3>
-        <p>This site was assessed for accessibilty 2nd of December 2015.</p>
-      </div>
-    </div>
-  </div>
-</div><!-- content -->
+  <h3>Conformance Date</h3>
+  <p>This site was assessed for accessibilty 2nd of December 2015.</p>
+</div>
