--- a/features/index.html
+++ b/features/index.html
@@ -2,56 +2,48 @@
 title: Features
 ---
 <!-- ======== @Region: #content ======== -->
-<div id="content">
-  <div class="container">
-    <div class="block">
-      <h2 class="title-divider">
-        <span><span>WebSurvey</span> Features</span>
-      </h2>
-      <div id="SurveyFeatures">
-        <div class="inner">
-          <!--Feature list-->
-          <!--a feature-->
-          <div class="feature-icon col-lg-2 col-md-2 col-sm-2 col-xs-12">
-            <img src="/img/features/customisable.png" width="96" height="95" alt="Customisable" class="img-responsive">
-          </div>
-          <div class="description col-lg-10 col-md-10 col-sm-10 col-xs-12">
-            <h3>Flexible, customisable survey design</h3>
-            <p>With capability for quantitative and qualitative questions, adaptive logic and answer variations, WebSurvey can create surveys that behave exactly the way you want.</p>
-            <p>WebSurvey allows you to badge online surveys with your own logos and brand. You have complete control over all survey content – from invitation and reminder emails, to your survey's introductory text.</p>
-            <p>If required, surveys can also be completed concurrently on paper.</p>
-          </div>
-          <!-- /feature-->
-          <!--a feature-->
-          <div class="feature-icon col-lg-2 col-md-2 col-sm-2 col-xs-12">
-            <img src="/img/features/accessible.png" width="96" height="95" alt="Accessible"  class="img-responsive">
-          </div>
-          <div class="description col-lg-10 col-md-10 col-sm-10 col-xs-12">
-            <h3>Accessible</h3>
-            <p>WebSurvey is able to ensure your survey fully complies with the Web Content Accessibility Guidelines (WCAG) 2.0 at the AA standard. Where formal certification is not necessary, WebSurvey can restrict the use of survey components to only those that have been assessed as compliant, and restrict the extent to which modifications are made to the survey in the way of colour contrasts or adjustments to these components.</p>
-            <p>Where formal certification is necessary, WebSurvey works with accessibility consultants to ensure that the final version of the survey complies with the guidelines.</p>
-          </div>
-          <!-- /feature-->
-          <!--a feature-->
-          <div class="feature-icon col-lg-2 col-md-2 col-sm-2 col-xs-12">
-            <img src="/img/features/mobile.png" width="96" height="95" alt="Mobile" class="img-responsive">
-          </div>
-    		  <div class="description col-lg-10 col-md-10 col-sm-10 col-xs-12">
-            <h3>Mobile ready</h3>
-            <p>WebSurvey's functionality can be implemented to be responsive, user friendly and appropriately rendered on tablets and mobile phones as well as desktop and laptops. Our system assesses the device the respondent is using and provides pages appropriate for touch-technology. Talk with us about the relevance of responsive technology for your project.</p>
-          </div>
-          <!-- /feature-->
-          <!--a feature-->
-          <div class="feature-icon col-lg-2 col-md-2 col-sm-2 col-xs-12">
-            <img src="/img/features/cost-effective.png" width="96" height="95" alt="Cost Effective" class="img-responsive">
-          </div>
-    		  <div class="description col-lg-10 col-md-10 col-sm-10 col-xs-12">
-            <h3>Cost-effective pricing</h3>
-            <p>WebSurvey's pricing is based on a per-use model. Set up costs begin at $2200 +GST, with a usage fee of $1.50 +GST per respondent. Additional services may not be covered by these fees. Speak to us to obtain a quote.</p>
-          </div>
-          <!-- /feature-->
-        </div>
-      </div> <!-- /SurveyFeatures-->
-    </div>
+<h2 class="title-divider">
+  <span><span>WebSurvey</span> Features</span>
+</h2>
+<div>
+  <!--Feature list-->
+  <!--a feature-->
+  <div class="feature-icon col-lg-2 col-md-2 col-sm-2 col-xs-12">
+    <img src="/img/features/customisable.png" width="96" height="95" alt="Customisable" class="img-responsive">
   </div>
-</div><!-- /content-->
+  <div class="description col-lg-10 col-md-10 col-sm-10 col-xs-12">
+    <h3>Flexible, customisable survey design</h3>
+    <p>With capability for quantitative and qualitative questions, adaptive logic and answer variations, WebSurvey can create surveys that behave exactly the way you want.</p>
+    <p>WebSurvey allows you to badge online surveys with your own logos and brand. You have complete control over all survey content – from invitation and reminder emails, to your survey's introductory text.</p>
+    <p>If required, surveys can also be completed concurrently on paper.</p>
+  </div>
+  <!-- /feature-->
+  <!--a feature-->
+  <div class="feature-icon col-lg-2 col-md-2 col-sm-2 col-xs-12">
+    <img src="/img/features/accessible.png" width="96" height="95" alt="Accessible"  class="img-responsive">
+  </div>
+  <div class="description col-lg-10 col-md-10 col-sm-10 col-xs-12">
+    <h3>Accessible</h3>
+    <p>WebSurvey is able to ensure your survey fully complies with the Web Content Accessibility Guidelines (WCAG) 2.0 at the AA standard. Where formal certification is not necessary, WebSurvey can restrict the use of survey components to only those that have been assessed as compliant, and restrict the extent to which modifications are made to the survey in the way of colour contrasts or adjustments to these components.</p>
+    <p>Where formal certification is necessary, WebSurvey works with accessibility consultants to ensure that the final version of the survey complies with the guidelines.</p>
+  </div>
+  <!-- /feature-->
+  <!--a feature-->
+  <div class="feature-icon col-lg-2 col-md-2 col-sm-2 col-xs-12">
+    <img src="/img/features/mobile.png" width="96" height="95" alt="Mobile" class="img-responsive">
+  </div>
+  <div class="description col-lg-10 col-md-10 col-sm-10 col-xs-12">
+    <h3>Mobile ready</h3>
+    <p>WebSurvey's functionality can be implemented to be responsive, user friendly and appropriately rendered on tablets and mobile phones as well as desktop and laptops. Our system assesses the device the respondent is using and provides pages appropriate for touch-technology. Talk with us about the relevance of responsive technology for your project.</p>
+  </div>
+  <!-- /feature-->
+  <!--a feature-->
+  <div class="feature-icon col-lg-2 col-md-2 col-sm-2 col-xs-12">
+    <img src="/img/features/cost-effective.png" width="96" height="95" alt="Cost Effective" class="img-responsive">
+  </div>
+  <div class="description col-lg-10 col-md-10 col-sm-10 col-xs-12">
+    <h3>Cost-effective pricing</h3>
+    <p>WebSurvey's pricing is based on a per-use model. Set up costs begin at $2200 +GST, with a usage fee of $1.50 +GST per respondent. Additional services may not be covered by these fees. Speak to us to obtain a quote.</p>
+  </div>
+  <!-- /feature-->
+</div>
