final styling fixups

--- a/index.html
+++ b/index.html
@@ -83,9 +83,9 @@ simply hand us your questions and we can do the rest</p>
 
 
 <!-- How does it work? -->
-<div class="block features">
+<div class="block">
   <h2 class="title-divider">
-    <span>Why <span>WebSurvey? </span></span>
+    <span>Why <span>WebSurvey?</span></span>
   </h2>
   <div class="row">
     <!-- How does it work box start -->
