updating links for features as per request

--- a/features/index.html
+++ b/features/index.html
@@ -8,8 +8,8 @@ title: Features
 <div>
   <!--Feature list-->
   <!--a feature-->
-  <div class="feature-icon col-lg-2 col-md-2 col-sm-2 col-xs-12">
-    <img src="/img/features/secure.png" width="96" height="95" alt="Secure"  class="img-responsive">
+  <div class="feature-icon col-lg-2 col-md-2 col-sm-2 col-xs-12" id="secure">
+    <img src="/img/features/secure.png" width="96" height="95" alt="Secure">
   </div>
   <div class="description col-lg-10 col-md-10 col-sm-10 col-xs-12">
     <h3>Secure and reliable survey hosting</h3>
@@ -19,7 +19,7 @@ title: Features
   <!-- /feature-->
   <!--a feature-->
   <div class="feature-icon col-lg-2 col-md-2 col-sm-2 col-xs-12">
-    <img src="/img/features/customisable.png" width="96" height="95" alt="Customisable" class="img-responsive">
+    <img src="/img/features/customisable.png" width="96" height="95" alt="Customisable">
   </div>
   <div class="description col-lg-10 col-md-10 col-sm-10 col-xs-12">
     <h3>Flexible, customisable survey design</h3>
@@ -29,8 +29,8 @@ title: Features
   </div>
   <!-- /feature-->
   <!--a feature-->
-  <div class="feature-icon col-lg-2 col-md-2 col-sm-2 col-xs-12">
-    <img src="/img/features/accessible.png" width="96" height="95" alt="Accessible"  class="img-responsive">
+  <div class="feature-icon col-lg-2 col-md-2 col-sm-2 col-xs-12" id="accessible">
+    <img src="/img/features/accessible.png" width="96" height="95" alt="Accessible">
   </div>
   <div class="description col-lg-10 col-md-10 col-sm-10 col-xs-12">
     <h3>Accessible</h3>
@@ -40,7 +40,7 @@ title: Features
   <!-- /feature-->
   <!--a feature-->
   <div class="feature-icon col-lg-2 col-md-2 col-sm-2 col-xs-12">
-    <img src="/img/features/mobile.png" width="96" height="95" alt="Mobile" class="img-responsive">
+    <img src="/img/features/mobile.png" width="96" height="95" alt="Mobile">
   </div>
   <div class="description col-lg-10 col-md-10 col-sm-10 col-xs-12">
     <h3>Mobile ready</h3>
@@ -49,7 +49,7 @@ title: Features
   <!-- /feature-->
   <!--a feature-->
   <div class="feature-icon col-lg-2 col-md-2 col-sm-2 col-xs-12">
-    <img src="/img/features/cost-effective.png" width="96" height="95" alt="Cost Effective" class="img-responsive">
+    <img src="/img/features/cost-effective.png" width="96" height="95" alt="Cost Effective">
   </div>
   <div class="description col-lg-10 col-md-10 col-sm-10 col-xs-12">
     <h3>Cost-effective pricing</h3>
