--- a/index.html
+++ b/index.html
@@ -40,38 +40,38 @@ simply hand us your questions and we can do the rest</p>
   </h2>
   <div class="row">
     <div class="feature col-sm-6 col-md-3">
-      <a href="/features/">
+      <a href="/services/#helpdesk">
         <img src="/img/features/helpdesk.png" alt="Helpdesk" />
       </a>
       <h3 class="title">
-        <a href="/features/">Helpdesk</a>
+        <a href="/services/#helpdesk">Helpdesk</a>
       </h3>
       <p>Assistance for your respondents.</p>
     </div>
     <div class="feature col-sm-6 col-md-3">
-      <a href="/features/">
+      <a href="/features/#secure">
         <img src="/img/features/secure.png" alt="Secure" />
       </a>
       <h3 class="title">
-        <a href="/features/">Secure</a>
+        <a href="/features/#secure">Secure</a>
       </h3>
       <p>Hosted in a secure Melbourne based co-location facility.</p>
     </div>
     <div class="feature col-sm-6 col-md-3">
-      <a href="/features/">
+      <a href="/features/#accessible">
         <img src="/img/features/accessible.png" alt="Accessible"/>
       </a>
       <h3 class="title">
-        <a href="/features/">Accessible</a>
+        <a href="/features/#accessible">Accessible</a>
       </h3>
       <p>All respondents can engage with your surveys.</p>
     </div>
     <div class="feature col-sm-6 col-md-3">
-      <a href="/features/">
+      <a href="/services/">
         <img src="/img/features/support.png" alt="Support" />
       </a>
       <h3 class="title">
-        <a href="/features/">Full support</a>
+        <a href="/services/">Full support</a>
       </h3>
       <p>We create and publish your survey, manage invitations and provide project support during the survey.</p>
     </div>
