--- a/services/index.html
+++ b/services/index.html
@@ -8,8 +8,8 @@ title: Services
 <div>
 <!--Service list-->
   <!--a service-->
-  <div class="feature-icon col-lg-2 col-md-2 col-sm-2 col-xs-12">
-    <img src="/img/features/helpdesk.png" width="96" height="95" alt="Help Desk" class="img-responsive">
+  <div class="feature-icon col-lg-2 col-md-2 col-sm-2 col-xs-12" id="helpdesk">
+    <img src="/img/features/helpdesk.png" width="96" height="95" alt="Help Desk">
   </div>
   <div class="description col-lg-10 col-md-10 col-sm-10 col-xs-12">
     <h3>Help desk support for your respondents</h3>
@@ -18,7 +18,7 @@ title: Services
   <!-- /service-->
   <!--a service-->
   <div class="feature-icon col-lg-2 col-md-2 col-sm-2 col-xs-12">
-    <img src="/img/features/profiles.png" width="96" height="95" alt="Profiles" class="img-responsive">
+    <img src="/img/features/profiles.png" width="96" height="95" alt="Profiles">
   </div>
   <div class="description col-lg-10 col-md-10 col-sm-10 col-xs-12">
     <h3>Respondent profiles and email invitations</h3>
@@ -29,7 +29,7 @@ title: Services
   <!-- /service-->
   <!--a service-->
   <div class="feature-icon col-lg-2 col-md-2 col-sm-2 col-xs-12">
-    <img src="/img/features/analysis.png" width="96" height="95" alt="Analysis" class="img-responsive">
+    <img src="/img/features/analysis.png" width="96" height="95" alt="Analysis">
   </div>
   <div class="description col-lg-10 col-md-10 col-sm-10 col-xs-12">
     <h3>Results, analysis and bulk survey reporting</h3>
