--- a/contact/index.html
+++ b/contact/index.html
@@ -26,23 +26,26 @@ title: Contact
     </div>
     <div class="col-md-6">
       <p>
-        <abbr title="Phone"><i class="fa fa-phone"></i></abbr>
+        <span class="sr-only">Phone number:</span><i class="fa fa-phone"></i>
         +613 9340 9001
       </p>
       <p>
-        <abbr title="Email"><i class="fa">@</i></abbr>
+        <span class="sr-only">Email:</span><i class="fa">@</i>
         <a href="mailto:info@websurvey.com.au">info@websurvey.com.au <span class="sr-only">(opens new mail window)</span></a>
       </p>
       <p>
-        <abbr title="Address"><i class="fa fa-home"></i></abbr>
+        <span class="sr-only">Street Address:</span><i class="fa fa-home"></i>
          2nd floor, 51 – 55 Johnston Street, Fitzroy , Victoria 3065, Australia
       </p>
        <p>
-        <abbr title="Address"><i class="fa fa-envelope"></i></abbr>
+        <span class="sr-only">Mailing Address:</span><i class="fa fa-envelope"></i>
          PO Box 1166, Carlton, Victoria 3053, Australia
       </p>
-      <p>
-      <iframe src="https://www.google.com/maps/embed?pb=!1m24!1m12!1m3!1d50442.64951781364!2d144.94215538729114!3d-37.797875993516584!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!4m9!1i0!3e6!4m0!4m5!1s0x6ad643274334fbcf%3A0x37e2cf3b959ac1d0!2s51-55+Johnston+St%2C+Fitzroy+VIC+3065%2C+Australia!3m2!1d-37.797881!2d144.976574!5e0!3m2!1sen!2suk!4v1409292640562" width="300" height="250" style="border:0"></iframe>
+      <p class="sd-map">
+        <a href="https://www.google.com/maps/dir//51-55+Johnston+St,+Fitzroy+VIC+3065,+Australia/@-37.797876,144.942155,11z/data=!4m9!4m8!1m0!1m5!1m1!1s0x6ad643274334fbcf:0x37e2cf3b959ac1d0!2m2!1d144.976574!2d-37.797881!3e0?hl=en-US" target="_blank">
+          <img src="/img/sdmap/SD-map-final.png" alt="Strategic data location">
+          <span class="sr-only">(opens new window to google maps)</span>
+        </a>
       </p>
     </div>
   </div>
