--- a/index.html
+++ b/index.html
@@ -67,11 +67,11 @@ simply hand us your questions and we can do the rest</p>
       <p>All respondents can engage with your surveys.</p>
     </div>
     <div class="feature col-sm-6 col-md-3">
-      <a href="/services/">
+      <a href="/faq/">
         <img src="/img/features/support.png" alt="Support" />
       </a>
       <h3 class="title">
-        <a href="/services/">Full support</a>
+        <a href="/faq/">Full support</a>
       </h3>
       <p>We create and publish your survey, manage invitations and provide project support during the survey.</p>
     </div>
