--- a/contact/index.html
+++ b/contact/index.html
@@ -27,7 +27,7 @@ title: Contact
     <div class="col-md-6">
       <p>
         <span class="sr-only">Phone number:</span><i class="fa fa-phone"></i>
-        +613 9340 9001
+        <a href="tel:0393409001">+613 9340 9001 <span class="sr-only">(calls number)</span></a>
       </p>
       <p>
         <span class="sr-only">Email:</span><i class="fa">@</i>
