enhancing meta data and titles for SEO

--- a/about/terms.html
+++ b/about/terms.html
@@ -1,5 +1,6 @@
 ---
-title: Terms
+title: We create an online survey for you | About WebSurvey | Melbourne
+description: WebSurvey provides a complete service for clients in Australia to create an online survey. Setup, execution, hosting &amp; reporting. Based in Fitzroy, Melbourne.
 ---
 <!-- ======== @Region: #content ======== -->
 <h2 class="title-divider">
