--- a/data-collection/index.html
+++ b/data-collection/index.html
@@ -1,5 +1,6 @@
 ---
-title: Data Collection
+title: Online Data Collection for Research Projects and Surveys | WebSurvey Australia
+description: The data management specialists at WebSurvey can set up and manage your data collection project so that you get the information you need. 
 ---
 <!-- ======== @Region: #content ======== -->
 <h2 class="title-divider">
