--- a/faq/index.html
+++ b/faq/index.html
@@ -1,5 +1,6 @@
 ---
-title: FAQ
+title: Complete online survey service | FAQs | WebSurvey | Fitzroy
+description: Find out more about WebSurvey's complete online survey services. Located in Fitzroy, Melbourne, we service clients located throughout Australia.
 ---
 <!-- ======== @Region: #content ======== -->
 <div class="row">
