--- a/features/index.html
+++ b/features/index.html
@@ -1,5 +1,6 @@
 ---
-title: Features
+title: Online survey creation, hosting &amp; reporting service | Australia | WebSurvey
+description: Complete online survey creation, hosting &amp; reporting service for market research, questionnaires, online audits &amp; data collection. WebSurvey, Australia.
 ---
 <!-- ======== @Region: #content ======== -->
 <h2 class="title-divider">
