--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 ---
-title: Home
+title: Online survey &amp; data collection service | WebSurvey | Australia
+description: We run your online survey for you! Complete service for online surveys &amp; data collection. Servicing clients throughout Australia. WebSurvey, Melbourne.
 ---
 <!-- ======== @Region: #highlighted ======== -->
 <div id="highlighted">
