--- a/services/index.html
+++ b/services/index.html
@@ -1,5 +1,6 @@
 ---
-title: Services
+title: WebSurvey | An online survey business | Melbourne | Australia
+description: WebSurvey is an online survey business created &amp; managed by survey experts. We can run your online surveys for you. Located in Melbourne, Australia.
 ---
 <!-- ======== @Region: #content ======== -->
 <h2 class="title-divider">
