restyling contact page

--- a/contact/index.html
+++ b/contact/index.html
@@ -3,30 +3,59 @@ title: Contact WebSurvey for your next online survey | Fitzroy | Melbourne
 description: Need an online survey? WebSurvey will run it for you. Contact us for a non obligation discussion about your online survey needs. WebSurvey. Melbourne.
 ---
 <!-- ======== @Region: #content ======== -->
-<h2 class="title-divider">
-  <span>Contact us</span>
-</h2>
-<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-  <p>
-    <span class="sr-only">Phone number:</span><i class="fa fa-phone"></i>
-    <a href="tel:0393409001">+613 9340 9001 <span class="sr-only">(calls number)</span></a>
-  </p>
-  <p>
-    <span class="sr-only">Email:</span><i class="fa">@</i>
-    <a href="mailto:info@websurvey.com.au">info@websurvey.com.au <span class="sr-only">(opens new mail window)</span></a>
-  </p>
-  <p>
-    <span class="sr-only">Street Address:</span><i class="fa fa-home"></i>
-     2nd floor, 51 – 55 Johnston Street, Fitzroy , Victoria 3065, Australia
-  </p>
-   <p>
-    <span class="sr-only">Mailing Address:</span><i class="fa fa-envelope"></i>
-     PO Box 1166, Carlton, Victoria 3053, Australia
-  </p>
-  <p class="sd-map">
-    <a href="https://www.google.com/maps/dir//51-55+Johnston+St,+Fitzroy+VIC+3065,+Australia/@-37.797876,144.942155,11z/data=!4m9!4m8!1m0!1m5!1m1!1s0x6ad643274334fbcf:0x37e2cf3b959ac1d0!2m2!1d144.976574!2d-37.797881!3e0?hl=en-US" target="_blank">
-      <img src="/img/sdmap/SD-map-final.png" alt="Strategic data location">
-      <span class="sr-only">(opens new window to google maps)</span>
-    </a>
-  </p>
+<div class="block features">
+  <h2 class="title-divider">
+    <span>Contact Us</span>
+  </h2>
+  <div class="row">
+    <div class="feature col-sm-6 col-md-3">
+      <a href="tel:0393409001">
+        <img src="/img/features/mobile.png" alt="Phone" />
+      </a>
+      <h3 class="title">
+        <a href="tel:0393409001">Phone Us</a>
+      </h3>
+      <p>+613 9340 9001</p>
+    </div>
+    <div class="feature col-sm-6 col-md-3">
+      <a href="mailto:info@websurvey.com.au">
+        <img src="/img/features/email.png" alt="email" />
+      </a>
+      <h3 class="title">
+        <a href="mailto:info@websurvey.com.au">Email Us</a>
+      </h3>
+      <p>info@websurvey.com.au</p>
+    </div>
+    <div class="feature col-sm-6 col-md-3">
+      <img src="/img/features/pencil.png" alt="mailing address"/>
+      <h3 class="title">
+        Mail Us
+      </h3>
+      <p>PO Box 1166, Carlton, Victoria 3053, Australia</p>
+    </div>
+    <div class="feature col-sm-6 col-md-3">
+      <a href="/faq/">
+        <img src="/img/features/mappin.png" alt="street address" />
+      </a>
+      <h3 class="title">
+        Visit Us
+      </h3>
+      <p>2nd floor, 51 – 55 Johnston Street, Fitzroy , Victoria 3065, Australia</p>
+    </div>
+  </div>
+  <div class="block">
+    <h2 class="title-divider">
+      <span>Find Us</span>
+    </h2>
+    <div class="row">
+      <div class="col-md-12">
+        <p class="sd-map">
+          <a href="https://www.google.com/maps/dir//51-55+Johnston+St,+Fitzroy+VIC+3065,+Australia/@-37.797876,144.942155,11z/data=!4m9!4m8!1m0!1m5!1m1!1s0x6ad643274334fbcf:0x37e2cf3b959ac1d0!2m2!1d144.976574!2d-37.797881!3e0?hl=en-US" target="_blank">
+            <img src="/img/sdmap/SD-map-final.png" alt="Strategic data location">
+            <span class="sr-only">(opens new window to google maps)</span>
+          </a>
+        </p>
+      </div>
+    </div>
+  </div>
 </div>
