restyling contact page

--- a/contact/index.html
+++ b/contact/index.html
@@ -27,7 +27,7 @@ description: Need an online survey? WebSurvey will run it for you. Contact us fo
       <p>info@websurvey.com.au</p>
     </div>
     <div class="feature col-sm-6 col-md-3">
-      <img src="/img/features/pencil.png" alt="mailing address"/>
+      <img src="/img/features/mail.png" alt="mailing address"/>
       <h3 class="title">
         Mail Us
       </h3>
@@ -35,7 +35,7 @@ description: Need an online survey? WebSurvey will run it for you. Contact us fo
     </div>
     <div class="feature col-sm-6 col-md-3">
       <a href="/faq/">
-        <img src="/img/features/mappin.png" alt="street address" />
+        <img src="/img/features/home.png" alt="street address" />
       </a>
       <h3 class="title">
         Visit Us
