restyling contact page

--- a/contact/index.html
+++ b/contact/index.html
@@ -31,16 +31,29 @@ description: Need an online survey? WebSurvey will run it for you. Contact us fo
       <h3 class="title">
         Mail Us
       </h3>
-      <p>PO Box 1166, Carlton, Victoria 3053, Australia</p>
+      <p>
+        PO Box 1166<br>
+        Carlton<br>
+        Victoria 3053<br>
+        Australia
+      </p>
     </div>
     <div class="feature col-sm-6 col-md-3">
-      <a href="/faq/">
+      <a href="https://www.google.com/maps/dir//51-55+Johnston+St,+Fitzroy+VIC+3065,+Australia/@-37.797876,144.942155,11z/data=!4m9!4m8!1m0!1m5!1m1!1s0x6ad643274334fbcf:0x37e2cf3b959ac1d0!2m2!1d144.976574!2d-37.797881!3e0?hl=en-US" target="_blank">
         <img src="/img/features/home.png" alt="street address" />
       </a>
       <h3 class="title">
-        Visit Us
+        <a href="https://www.google.com/maps/dir//51-55+Johnston+St,+Fitzroy+VIC+3065,+Australia/@-37.797876,144.942155,11z/data=!4m9!4m8!1m0!1m5!1m1!1s0x6ad643274334fbcf:0x37e2cf3b959ac1d0!2m2!1d144.976574!2d-37.797881!3e0?hl=en-US" target="_blank">
+          Visit Us
+        </a>
       </h3>
-      <p>2nd floor, 51 – 55 Johnston Street, Fitzroy , Victoria 3065, Australia</p>
+      <p>
+        2nd floor<br>
+        51 – 55 Johnston Street<br>
+        Fitzroy<br>
+        Victoria 3065<br>
+        Australia
+      </p>
     </div>
   </div>
   <div class="block">
